--- a/appsettings.json
+++ b/appsettings.json
@@ -5,13 +5,15 @@
     "AzureBlobStorageConfigConnection": "<<ConnectionSpec>>"
   },
   "Command": "backup", // backup|copy|delete|restore
-  "Target": "ToFile", // ToFile|ToBlob|Rows|Table|All
-  "TableName": "TableToBackup",
+  "Target": "all", // ToFile|ToBlob|Rows|Table|All
+  "TableName": "",
   "DestinationTableName": "TableToRestoreOrCopyDestination",
-  "TableNameToDelete": "DeleteMe",
+  "TableNameToDelete": "",
   "OriginalTableName": "TableNameAsBackedUp",
   "BlobRoot": "backups",
-  "BlobFileName": "BlobFileFromAppSettings",
+  "BlobRootSubFolder": "pipelinename",
+  "BlobFileName": "",
+  "BlobTablesToEsclude": "",
   "WorkingDirectory": "d:\\temp",
   "OutFileDirectory": "d:\\temp",
   "RestoreFileNamePath": "d:\\temp\\test\\filename.txt",
@@ -20,18 +22,18 @@
   "RetentionDays": "30", // used on backup, blob files older than xx are aged
   "TimeoutSeconds": "30",
   "Filters": [
-    {
-      "Join": "",
-      "Option": "PartitionKey",
-      "Comparison": "Equal",
-      "Value": "PartitionKeyValue"
-    },
-    {
-      "Join": "OR",
-      "Option": "Timestamp",
-      "Comparison": "=",
-      "Value": "2020-01-01"
-    }
+    //{
+    //  "Join": "",
+    //  "Option": "PartitionKey",
+    //  "Comparison": "Equal",
+    //  "Value": "PartitionKeyValue"
+    //},
+    //{
+    //  "Join": "OR",
+    //  "Option": "Timestamp",
+    //  "Comparison": "=",
+    //  "Value": "2020-01-01"
+    //}
   ],
   "InFilePathName": ""
 }
