--- a/appsettings.json
+++ b/appsettings.json
@@ -11,7 +11,7 @@
   "TableNameToDelete": "",
   "OriginalTableName": "TableNameAsBackedUp",
   "BlobRoot": "backups",
-  "BlobRootSubFolder": "pipelinename",
+  "BlobRootSubFolder": "pipelinename2",
   "BlobFileName": "",
   "BlobTablesToEsclude": "",
   "WorkingDirectory": "d:\\temp",
